Добавлены классы Message, Chat Добавлено создание текстового файла со всеми чатами пользователя

--- a/Messenger/Messenger.csproj
+++ b/Messenger/Messenger.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Chat.cs" />
+    <Compile Include="Classes\Message.cs" />
     <Compile Include="Classes\UserManager.cs" />
     <Compile Include="Classes\User.cs" />
     <Compile Include="FormAuthorization.cs">
@@ -109,9 +111,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Data\Chats\тест.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Data\Users\Users.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
