--- a/Messenger/Messenger.csproj
+++ b/Messenger/Messenger.csproj
@@ -120,6 +120,9 @@
     <Content Include="Data\Users\Users.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\icons8-отправить-сообщение-50.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\icons8-сообщения-32.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
