Пусть будет интерфейс

--- a/Messenger/Messenger.csproj
+++ b/Messenger/Messenger.csproj
@@ -74,6 +74,7 @@
     <Compile Include="FormWelcome.Designer.cs">
       <DependentUpon>FormWelcome.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IUserManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAuthorization.resx">
